<resources>
    <string name="app_name">WhatMovies</string>
    <string name="movies">Movies</string>
    <string name="tv_show">TV Show</string>
    <string name="poster">Poster</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="backdrop">Backdrop</string>
    <string name="star">star</string>
    <string name="overview">Overview</string>
    <string name="year">Year</string>
    <string name="you_share">You share</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="empty_data">Empty data</string>
    <string name="version">"v%s"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorites</string>
    <string name="default_error">Something Error</string>
</resources>